@@ -16,13 +16,13 @@ plugins {
   id 'application'
   id 'checkstyle'
   id 'jacoco'
-  id 'io.spring.dependency-management' version '1.1.6'
+  id 'io.spring.dependency-management' version '1.1.7'
   id 'org.springframework.boot' version '3.3.5'
   id 'com.github.ben-manes.versions' version '0.51.0'
   id 'org.sonarqube' version '6.2.0.5505'
   id 'project-report'
   id 'idea'
-  id 'info.solidsoft.pitest' version '1.15.0'
+  id 'info.solidsoft.pitest' version '1.19.0-rc.2'
   id 'com.github.hmcts.rse-cft-lib' version '0.19.1705'
 }
 
@@ -36,6 +36,16 @@ version = '1.0.0'
 
 def mirrorHost = System.env.NONPROD_SUBSCRIPTION_NAME == "sandbox" ? "artifactory.sandbox" : "artifactory"
 def mirrorUrl = "https://${mirrorHost}.platform.hmcts.net/artifactory/maven-remotes"
+
+java {
+  toolchain {
+    languageVersion = JavaLanguageVersion.of(21)
+  }
+}
+
+application {
+  mainClass.set('uk.gov.hmcts.reform.fpl.Application')
+}
 
 sourceSets {
   functionalTest {
@@ -73,8 +83,8 @@ sourceSets {
 
 idea {
   module {
-    testSourceDirs += file('src/integrationTest/java')
-    testSourceDirs += file('src/functionalTest/java')
+    testSources.from file('src/integrationTest/java')
+    testSources.from file('src/functionalTest/java')
   }
 }
 
@@ -91,7 +101,7 @@ configurations.integrationTestImplementation {
   exclude group: 'org.springframework.cloud', module: 'spring-cloud-starter-netflix-hystrix'
 }
 
-tasks.withType(JavaCompile) {
+tasks.withType(JavaCompile).configureEach {
   options.compilerArgs << "-Xlint:unchecked" << "-Werror"
 }
 
@@ -104,7 +114,9 @@ tasks.withType(JavaCompile) {
   }
 }*/
 
-task integration(type: Test, description: 'Runs the integration tests.', group: 'Verification') {
+tasks.register('integration', Test) {
+  description = 'Runs the integration tests.'
+  group = 'Verification'
   testClassesDirs = sourceSets.integrationTest.output.classesDirs
   classpath = sourceSets.integrationTest.runtimeClasspath
   // set your environment variables here
@@ -112,23 +124,23 @@ task integration(type: Test, description: 'Runs the integration tests.', group: 
 }
 check.dependsOn integration
 
-task lintUserInterfaceTests(type: Exec, description: 'Runs linting of E2E tests.') {
+tasks.register('lintUserInterfaceTests', Exec) {
+  description = 'Runs linting of E2E tests.'
   commandLine '/usr/bin/yarn', 'lint'
 }
 
-task runSmokeTests(type: Exec, description: 'Runs smoke tests.') {
+tasks.register('runSmokeTests', Exec) {
+  description = 'Runs smoke tests.'
   commandLine '/usr/bin/yarn', '--silent', 'test:smoke'
 }
 
-task runApiTests(type: Exec, description: 'Runs api tests.', group: 'Verification') {
+tasks.register('runApiTests', Exec) {
+  description = 'Runs api tests.'
+  group = 'Verification'
   onlyIf {
     return System.env.SKIP_API_TESTS == null || System.env.SKIP_API_TESTS == 'false'
   }
   commandLine '/usr/bin/yarn', 'test:api-test'
-//  testLogging.showStandardStreams = true
-//  testClassesDirs = sourceSets.functionalTest.output.classesDirs
-//  classpath = sourceSets.functionalTest.runtimeClasspath
-//  finalizedBy aggregate
 }
 
 project.ext {
@@ -136,7 +148,9 @@ project.ext {
   pacticipantVersion = System.env.GIT_COMMIT != null ? System.env.GIT_COMMIT.substring(0,9) : ''
 }
 
-task runContractTests(type: Test, description: 'Runs contract tests.', group: 'Verification') {
+tasks.register('runContractTests', Test) {
+  description = 'Runs contract tests.'
+  group = 'Verification'
   onlyIf {
     return System.env.SKIP_CONTRACT_TESTS == null || System.env.SKIP_CONTRACT_TESTS == 'false'
   }
@@ -148,7 +162,9 @@ task runContractTests(type: Test, description: 'Runs contract tests.', group: 'V
 }
 
 
-task runAndPublishConsumerPactTests(type: Test, description: 'Publish pact test to broker.', group: 'Verification') {
+tasks.register('runAndPublishConsumerPactTests', Test) {
+  description = 'Publish pact test to broker.'
+  group = 'Verification'
   logger.lifecycle("Runs pact consumer Tests")
   testClassesDirs = sourceSets.contractTest.output.classesDirs
   classpath = sourceSets.contractTest.runtimeClasspath
@@ -177,7 +193,9 @@ def static inStrictOrder(Task... tasks) {
   return tasks
 }
 
-task smoke(type: Test, description: 'Runs smoke test.', group: 'Verification') {
+tasks.register('smoke', Test) {
+  description = 'Runs smoke test.'
+  group = 'Verification'
   testLogging.showStandardStreams = true
   testClassesDirs = sourceSets.functionalTest.output.classesDirs
   classpath = sourceSets.functionalTest.runtimeClasspath
@@ -185,15 +203,19 @@ task smoke(type: Test, description: 'Runs smoke test.', group: 'Verification') {
   finalizedBy aggregate
 }
 
-task runCodeceptSmokeTest(type: Test, description: 'Runs the old codecept smoke test.', group: 'Verification') {
+tasks.register('runCodeceptSmokeTest', Test) {
+  description = 'Runs the old codecept smoke test.'
+  group = 'Verification'
   dependsOn(inStrictOrder(runSmokeTests))
 }
 
-task functional(type:Test,description: 'Runs the functional tests.') {
+tasks.register('functional', Test) {
+  description = 'Runs the functional tests.'
   dependsOn(inStrictOrder(runApiTests))
 }
 
-task contract(description: 'Runs the contract tests.') {
+tasks.register('contract') {
+  description = 'Runs the contract tests.'
   dependsOn(inStrictOrder(runContractTests))
 }
 
@@ -278,10 +300,10 @@ repositories {
 // it is important to specify logback classic and core packages explicitly as libraries like spring boot
 // enforces it's own (older) version which is not recommended.
 def versions = [
-  reformLogging   : '5.1.9',
+  hmctsLogging    : '6.1.9',
   springBoot      : springBoot.class.package.implementationVersion,
-  log4j           : '2.24.3',
-  logbackVersion  : '1.5.14',
+  log4j           : '2.25.2',
+  logbackVersion  : '1.5.22',
   jackson         : '2.18.3',
   pdfbox          : '2.0.33',
   mockito         : '5.2.0',
@@ -289,8 +311,6 @@ def versions = [
   pact_version    : '4.1.7',
   junit_jupiter   : '5.11.4',
   lombok          : '1.18.38',
-  pitest          : '1.15.0',
-  gradlePitest    : '1.3.0',
   sonarPitest     : '0.5'
 ]
 
@@ -298,25 +318,25 @@ dependencies {
   compileOnly group: 'org.projectlombok', name: 'lombok', version: versions.lombok
   annotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
 
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc'
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-quartz'
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
-  implementation group: 'org.springframework.retry', name: 'spring-retry'
+  implementation 'org.springframework.boot:spring-boot-starter-web'
+  implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+  implementation 'org.springframework.boot:spring-boot-starter-quartz'
+  implementation 'org.springframework.boot:spring-boot-starter-actuator'
+  implementation 'org.springframework.boot:spring-boot-starter-aop'
+  implementation 'org.springframework.retry:spring-retry'
 
-  implementation group: 'org.springframework.security', name: 'spring-security-oauth2-jose', version: '6.4.4'
+  implementation group: 'org.springframework.security', name: 'spring-security-oauth2-jose', version: '6.5.4'
   implementation group: 'org.springframework.security', name: 'spring-security-oauth2-resource-server', version: '6.4.4'
 
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail'
+  implementation 'org.springframework.boot:spring-boot-starter-validation'
+  implementation 'org.springframework.boot:spring-boot-starter-mail'
 
   implementation group: 'org.bitbucket.b_c', name: 'jose4j', version: '0.9.6'
   implementation group: 'org.apache.pdfbox', name: 'pdfbox', version: versions.pdfbox
 
   implementation group: 'org.apache.commons', name: 'commons-text', version: '1.13.1'
   implementation group: 'org.apache.commons', name: 'commons-csv', version: '1.14.0'
-  implementation 'org.apache.commons:commons-lang3:3.17.0'
+  implementation 'org.apache.commons:commons-lang3:3.20.0'
 
   implementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '7.7.0'
   implementation group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '3.2.0'
@@ -324,15 +344,17 @@ dependencies {
   implementation group: 'org.flywaydb', name: 'flyway-core', version: '11.9.0'
   implementation group: 'org.flywaydb', name: 'flyway-database-postgresql', version: '11.9.0'
 
-  implementation group: 'com.github.hmcts', name: 'java-logging', version: versions.reformLogging
-  implementation group: 'com.github.hmcts.java-logging', name: 'logging-appinsights', version: versions.reformLogging
+  implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: versions.hmctsLogging
+  implementation group: 'com.github.hmcts.java-logging', name: 'logging-appinsights', version: versions.hmctsLogging
+  implementation group: 'com.github.hmcts.java-logging', name: 'logging-spring', version: '5.1.7'
+
   implementation group: 'commons-fileupload', name: 'commons-fileupload', version: '1.5'
-  implementation group: 'com.github.hmcts', name: 'idam-java-client', version: '3.0.4'
+  implementation group: 'com.github.hmcts', name: 'idam-java-client', version: '3.0.5'
   implementation group: 'com.github.hmcts', name: 'document-management-client', version: '7.0.1'
   implementation group: 'com.github.hmcts', name: 'core-case-data-store-client', version: '5.1.0'
   implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '5.3.2'
-  implementation group: 'com.github.hmcts', name: 'auth-checker-lib', version: '3.1.1'
-  implementation group: 'com.github.hmcts', name: 'send-letter-client', version: '4.0.4'
+  implementation group: 'com.github.hmcts', name: 'auth-checker-lib', version: '3.1.2'
+  implementation group: 'com.github.hmcts', name: 'send-letter-client', version: '5.1.1'
   implementation group: 'uk.gov.service.notify', name: 'notifications-java-client', version: '5.2.1-RELEASE'
 
   implementation group: 'com.github.hmcts', name: 'ccd-case-document-am-client', version: '1.59.2'
@@ -351,25 +373,25 @@ dependencies {
   implementation group: 'com.microsoft.azure', name: 'applicationinsights-core', version: '3.7.2'
   implementation group: 'com.microsoft.azure', name: 'applicationinsights-web', version: '3.7.2'
 
-  implementation 'org.postgresql:postgresql:42.7.5'
+  implementation 'org.postgresql:postgresql:42.7.8'
 
-  testImplementation group: 'org.pitest', name: 'pitest', version: '1.16.1'
+  testImplementation group: 'org.pitest', name: 'pitest', version: '1.22.0'
   testImplementation group: 'info.solidsoft.gradle.pitest', name: 'gradle-pitest-plugin', version: '1.15.0'
-  testImplementation group: 'org.pitest', name: 'pitest-junit5-plugin', version: '1.2.2'
+  testImplementation group: 'org.pitest', name: 'pitest-junit5-plugin', version: '1.2.3'
 
   testImplementation group: 'org.apache.pdfbox', name: 'pdfbox', version: versions.pdfbox
   integrationTestImplementation group: 'org.apache.pdfbox', name: 'pdfbox', version: versions.pdfbox
 
-  testImplementation(group: 'org.springframework.boot', name: 'spring-boot-starter-test') {
+  testImplementation('org.springframework.boot:spring-boot-starter-test') {
     exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     exclude group: "com.vaadin.external.google", module: "android-json"
   }
 
   integrationTestImplementation group: 'org.apache.commons', name: 'commons-text', version: '1.13.1'
-  testImplementation group: 'org.springframework.retry', name: 'spring-retry'
+  testImplementation 'org.springframework.retry:spring-retry'
   testImplementation group: 'org.awaitility', name: 'awaitility', version: '4.3.0'
 
-  testImplementation group: 'org.springframework.security', name: 'spring-security-test'
+  testImplementation 'org.springframework.security:spring-security-test'
 
   testImplementation group: 'org.mockito', name: 'mockito-core', version: versions.mockito
   testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: versions.mockito
@@ -403,7 +425,7 @@ dependencies {
 
   contractTestImplementation group: 'au.com.dius.pact.consumer', name: 'junit5', version: versions.pact_version
   contractTestImplementation group: 'au.com.dius.pact.consumer', name: 'java8', version: versions.pact_version
-  contractTestImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
+  contractTestImplementation 'org.springframework.boot:spring-boot-starter-test'
   contractTestImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: versions.junit_jupiter
   contractTestRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: versions.junit_jupiter
   contractTestImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: versions.junit_jupiter
@@ -418,8 +440,6 @@ dependencies {
   contractTestImplementation group: 'com.google.guava', name: 'guava', version: '33.3.1-jre'
 }
 
-mainClassName = 'uk.gov.hmcts.reform.fpl.Application'
-
 bootJar {
   archiveFileName = 'service.jar'
 
@@ -431,11 +451,14 @@ bootJar {
 test {
   maxHeapSize = "1024m"
   useJUnitPlatform()
+  jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED'
 }
 
 integration {
   maxHeapSize = "1024m"
+  maxParallelForks = 4
   useJUnitPlatform()
+  jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED'
 }
 
 pitest {
@@ -450,6 +473,7 @@ pitest {
   ])
   timestampedReports.set(true)
   mutationThreshold.set(75)
+  jvmArgs = ['--add-opens=java.base/java.lang=ALL-UNNAMED']
 }
 
 dependencyManagement {
